--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+   "homepage": "https://sundstorm91.github.io/e-commerce-App",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
